Remove dependency on incubator http client (sneaked in from copying the pom.xml file from another project).